wdl-ast/tests/validation/duplicate-struct-member/source.errors
error: conflicting struct member name `x`
  ┌─ tests/validation/duplicate-struct-member/source.wdl:8:9
  │
6 │     Int x
  │         - first struct member with this name is here
7 │     Int y
8 │     Int x
  │         ^ this conflicts with a previous struct member of the same name

error: conflicting struct member name `y`
  ┌─ tests/validation/duplicate-struct-member/source.wdl:9:9
  │
7 │     Int y
  │         - first struct member with this name is here
8 │     Int x
9 │     Int y
  │         ^ this conflicts with a previous struct member of the same name

