wdl-ast/tests/validation/duplicate-struct-member/source.wdl
## This is a test of duplicate struct members.

version 1.1

struct Foo {
    Int x
    Int y
    Int x
    Int y
}
